# docpull

./: .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  INSTALL.md  README.md  content-scraper-api.py  deploy.py  docpull  docpull.py  faculty-scraper-api.py  install  pyproject.toml  requirements.txt  scrape.py  selectors.json  setup.py  teardown.py  uninstall
.github/workflows/: batch-scraper-test.yml  github-workflow-example.yml  test-content.yml  test-links.yml  update-docs.yml
api/: bulk.py  scraper.py  server.py  urls.py
cli/: main.py
config/: utils.py
data/: claude-code_links.json  claude-platform_links.json  cursor_links.json  playwright_links.json  whatnot_links.json
docs/: ACCESS_KEY_PR.md  ARCHITECTURE.md  SCRAPER_REFACTOR_PLAN.md  architecture.md
docs/claude/: slash-commands.md
docs/cursor/: agent_hooks.md  hooks.md
docs/modal/: volumes.md
docs/unsloth/: qwen-image-2512.md
docs/whatnot/information/: inventory.md
luggage/: ARCHITECTURE.md
sandbox/: opencode.py
scraper/: __init__.py  __main__.py  bulk.py  core.py  extract.py  fetchers.py  models.py  types.py
scraper/config/: sites.json
scraper/extractors/: __init__.py  claude_code.py  convex.py  cursor.py  default.py  modal.py  terraform.py  unsloth.py
scripts/: scrape.py  terraform_docs_scraper.js
setup/: README.md  install.html  server.py
tests/: test_bulk.py  test_convex_all_links.py  test_modal.py  test_terraform_all_links.py  test_terraform_markdown.py  test_urls.py
ui/: FEATURES.md  PLAN.md  README.md  app.py  server.py  ui.html
