[project]
name = "docpull"
version = "0.1.0"
description = "CLI tool to fetch and cache documentation as markdown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "modal>=1.3.2",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
]

[project.scripts]
docpull = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*", "config*"]
